[gd_scene load_steps=20 format=3 uid="uid://jhar81iobxiu"]

[ext_resource type="Script" path="res://Boss.gd" id="1_muh0t"]
[ext_resource type="Texture2D" uid="uid://bip0si1wnsla" path="res://assests/textured level 2 without jump locations.png" id="2_wv30y"]
[ext_resource type="PackedScene" uid="uid://djobdn0kpo3iw" path="res://bar_b.tscn" id="3_spd0w"]
[ext_resource type="Texture2D" uid="uid://cvpdu8e05j4sn" path="res://icon.svg" id="4_02cls"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_i5it7"]
size = Vector2(5674, 23.5769)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pkur4"]
size = Vector2(151.987, 5267.19)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ojy2k"]
size = Vector2(559.5, 33)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vuj4r"]
size = Vector2(529.75, 5.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_emdns"]
size = Vector2(435.938, 3.75)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_msges"]
size = Vector2(435.938, 3.75)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pe2pc"]
size = Vector2(409.969, 3.75)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_n8108"]
size = Vector2(573.984, 3.75)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_k0l0s"]
size = Vector2(439.992, 3.75)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_nk4w7"]
size = Vector2(403.996, 3.875)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vb606"]
size = Vector2(425.998, 6.9375)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6lo2o"]
size = Vector2(523.999, 6.46875)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ujtbh"]
size = Vector2(92.9995, 6.46875)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kh5md"]
size = Vector2(462.5, 6.46875)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0k26d"]
size = Vector2(3625.62, 2739.09)

[node name="Boss" type="Node2D"]
script = ExtResource("1_muh0t")

[node name="Tiles" type="Node2D" parent="."]

[node name="Tile 1" type="Node2D" parent="Tiles"]
position = Vector2(0, 191)
scale = Vector2(0.815855, 0.815855)

[node name="Ground level" type="Sprite2D" parent="Tiles/Tile 1"]
position = Vector2(2832, 399)
texture = ExtResource("2_wv30y")

[node name="Ground" type="StaticBody2D" parent="Tiles/Tile 1/Ground level"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Tiles/Tile 1/Ground level/Ground"]
position = Vector2(-1, 628)
shape = SubResource("RectangleShape2D_i5it7")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Tiles/Tile 1/Ground level/Ground"]
position = Vector2(-2857.74, -2017.38)
shape = SubResource("RectangleShape2D_pkur4")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="Tiles/Tile 1/Ground level/Ground"]
position = Vector2(73500.2, -2030.42)
shape = SubResource("RectangleShape2D_pkur4")

[node name="CollisionShape2D4" type="CollisionShape2D" parent="Tiles/Tile 1/Ground level/Ground"]
position = Vector2(73500.2, -2030.42)
shape = SubResource("RectangleShape2D_pkur4")

[node name="Boxs" type="StaticBody2D" parent="Tiles/Tile 1/Ground level"]
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Tiles/Tile 1/Ground level/Boxs"]
position = Vector2(-2334.75, 56.5)
shape = SubResource("RectangleShape2D_ojy2k")
one_way_collision = true

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Tiles/Tile 1/Ground level/Boxs"]
position = Vector2(-1940.88, 245.25)
shape = SubResource("RectangleShape2D_vuj4r")
one_way_collision = true

[node name="CollisionShape2D3" type="CollisionShape2D" parent="Tiles/Tile 1/Ground level/Boxs"]
position = Vector2(-1577.94, 299)
shape = SubResource("RectangleShape2D_emdns")
one_way_collision = true

[node name="CollisionShape2D4" type="CollisionShape2D" parent="Tiles/Tile 1/Ground level/Boxs"]
position = Vector2(-1153.97, 123.125)
shape = SubResource("RectangleShape2D_emdns")
one_way_collision = true

[node name="CollisionShape2D5" type="CollisionShape2D" parent="Tiles/Tile 1/Ground level/Boxs"]
position = Vector2(-713, -44)
shape = SubResource("RectangleShape2D_emdns")
one_way_collision = true

[node name="CollisionShape2D6" type="CollisionShape2D" parent="Tiles/Tile 1/Ground level/Boxs"]
position = Vector2(-713, -44)
shape = SubResource("RectangleShape2D_msges")
one_way_collision = true

[node name="CollisionShape2D7" type="CollisionShape2D" parent="Tiles/Tile 1/Ground level/Boxs"]
position = Vector2(-274.984, 231)
shape = SubResource("RectangleShape2D_pe2pc")
one_way_collision = true

[node name="CollisionShape2D8" type="CollisionShape2D" parent="Tiles/Tile 1/Ground level/Boxs"]
position = Vector2(231.008, 226)
shape = SubResource("RectangleShape2D_n8108")
one_way_collision = true

[node name="CollisionShape2D9" type="CollisionShape2D" parent="Tiles/Tile 1/Ground level/Boxs"]
position = Vector2(719, 43)
shape = SubResource("RectangleShape2D_k0l0s")
one_way_collision = true

[node name="CollisionShape2D10" type="CollisionShape2D" parent="Tiles/Tile 1/Ground level/Boxs"]
position = Vector2(1143, 243.062)
shape = SubResource("RectangleShape2D_nk4w7")
one_way_collision = true

[node name="CollisionShape2D11" type="CollisionShape2D" parent="Tiles/Tile 1/Ground level/Boxs"]
position = Vector2(1561, 299.531)
shape = SubResource("RectangleShape2D_vb606")
one_way_collision = true

[node name="CollisionShape2D12" type="CollisionShape2D" parent="Tiles/Tile 1/Ground level/Boxs"]
position = Vector2(1909, 128)
shape = SubResource("RectangleShape2D_6lo2o")
one_way_collision = true

[node name="CollisionShape2D14" type="CollisionShape2D" parent="Tiles/Tile 1/Ground level/Boxs"]
position = Vector2(2094, -32)
rotation = -0.149445
shape = SubResource("RectangleShape2D_ujtbh")
one_way_collision = true

[node name="CollisionShape2D13" type="CollisionShape2D" parent="Tiles/Tile 1/Ground level/Boxs"]
position = Vector2(2374, -47)
shape = SubResource("RectangleShape2D_kh5md")
one_way_collision = true

[node name="Middle Shelf" type="Sprite2D" parent="Tiles/Tile 1"]
position = Vector2(2832, -685)
texture = ExtResource("2_wv30y")

[node name="Ground" type="StaticBody2D" parent="Tiles/Tile 1/Middle Shelf"]
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Tiles/Tile 1/Middle Shelf/Ground"]
position = Vector2(-1, 650.212)
shape = SubResource("RectangleShape2D_i5it7")
one_way_collision = true

[node name="Boxs" type="StaticBody2D" parent="Tiles/Tile 1/Middle Shelf"]
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Tiles/Tile 1/Middle Shelf/Boxs"]
position = Vector2(-2334.75, 56.5)
shape = SubResource("RectangleShape2D_ojy2k")
one_way_collision = true

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Tiles/Tile 1/Middle Shelf/Boxs"]
position = Vector2(-1940.88, 245.25)
shape = SubResource("RectangleShape2D_vuj4r")
one_way_collision = true

[node name="CollisionShape2D3" type="CollisionShape2D" parent="Tiles/Tile 1/Middle Shelf/Boxs"]
position = Vector2(-1577.94, 299)
shape = SubResource("RectangleShape2D_emdns")
one_way_collision = true

[node name="CollisionShape2D4" type="CollisionShape2D" parent="Tiles/Tile 1/Middle Shelf/Boxs"]
position = Vector2(-1153.97, 123.125)
shape = SubResource("RectangleShape2D_emdns")
one_way_collision = true

[node name="CollisionShape2D5" type="CollisionShape2D" parent="Tiles/Tile 1/Middle Shelf/Boxs"]
position = Vector2(-713, -44)
shape = SubResource("RectangleShape2D_emdns")
one_way_collision = true

[node name="CollisionShape2D6" type="CollisionShape2D" parent="Tiles/Tile 1/Middle Shelf/Boxs"]
position = Vector2(-713, -44)
shape = SubResource("RectangleShape2D_msges")
one_way_collision = true

[node name="CollisionShape2D7" type="CollisionShape2D" parent="Tiles/Tile 1/Middle Shelf/Boxs"]
position = Vector2(-274.984, 231)
shape = SubResource("RectangleShape2D_pe2pc")
one_way_collision = true

[node name="CollisionShape2D8" type="CollisionShape2D" parent="Tiles/Tile 1/Middle Shelf/Boxs"]
position = Vector2(231.008, 226)
shape = SubResource("RectangleShape2D_n8108")
one_way_collision = true

[node name="CollisionShape2D9" type="CollisionShape2D" parent="Tiles/Tile 1/Middle Shelf/Boxs"]
position = Vector2(719, 43)
shape = SubResource("RectangleShape2D_k0l0s")
one_way_collision = true

[node name="CollisionShape2D10" type="CollisionShape2D" parent="Tiles/Tile 1/Middle Shelf/Boxs"]
position = Vector2(1143, 243.062)
shape = SubResource("RectangleShape2D_nk4w7")
one_way_collision = true

[node name="CollisionShape2D11" type="CollisionShape2D" parent="Tiles/Tile 1/Middle Shelf/Boxs"]
position = Vector2(1561, 299.531)
shape = SubResource("RectangleShape2D_vb606")
one_way_collision = true

[node name="CollisionShape2D12" type="CollisionShape2D" parent="Tiles/Tile 1/Middle Shelf/Boxs"]
position = Vector2(1909, 128)
shape = SubResource("RectangleShape2D_6lo2o")
one_way_collision = true

[node name="CollisionShape2D14" type="CollisionShape2D" parent="Tiles/Tile 1/Middle Shelf/Boxs"]
position = Vector2(2094, -32)
rotation = -0.149445
shape = SubResource("RectangleShape2D_ujtbh")
one_way_collision = true

[node name="CollisionShape2D13" type="CollisionShape2D" parent="Tiles/Tile 1/Middle Shelf/Boxs"]
position = Vector2(2374, -47)
shape = SubResource("RectangleShape2D_kh5md")
one_way_collision = true

[node name="Top Shelf" type="Sprite2D" parent="Tiles/Tile 1"]
position = Vector2(2832, -1769)
texture = ExtResource("2_wv30y")

[node name="Ground" type="StaticBody2D" parent="Tiles/Tile 1/Top Shelf"]
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Tiles/Tile 1/Top Shelf/Ground"]
position = Vector2(-1, 650.212)
shape = SubResource("RectangleShape2D_i5it7")
one_way_collision = true

[node name="Boxs" type="StaticBody2D" parent="Tiles/Tile 1/Top Shelf"]
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Tiles/Tile 1/Top Shelf/Boxs"]
position = Vector2(-2334.75, 56.5)
shape = SubResource("RectangleShape2D_ojy2k")
one_way_collision = true

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Tiles/Tile 1/Top Shelf/Boxs"]
position = Vector2(-1940.88, 245.25)
shape = SubResource("RectangleShape2D_vuj4r")
one_way_collision = true

[node name="CollisionShape2D3" type="CollisionShape2D" parent="Tiles/Tile 1/Top Shelf/Boxs"]
position = Vector2(-1577.94, 299)
shape = SubResource("RectangleShape2D_emdns")
one_way_collision = true

[node name="CollisionShape2D4" type="CollisionShape2D" parent="Tiles/Tile 1/Top Shelf/Boxs"]
position = Vector2(-1153.97, 123.125)
shape = SubResource("RectangleShape2D_emdns")
one_way_collision = true

[node name="CollisionShape2D5" type="CollisionShape2D" parent="Tiles/Tile 1/Top Shelf/Boxs"]
position = Vector2(-713, -44)
shape = SubResource("RectangleShape2D_emdns")
one_way_collision = true

[node name="CollisionShape2D6" type="CollisionShape2D" parent="Tiles/Tile 1/Top Shelf/Boxs"]
position = Vector2(-713, -44)
shape = SubResource("RectangleShape2D_msges")
one_way_collision = true

[node name="CollisionShape2D7" type="CollisionShape2D" parent="Tiles/Tile 1/Top Shelf/Boxs"]
position = Vector2(-274.984, 231)
shape = SubResource("RectangleShape2D_pe2pc")
one_way_collision = true

[node name="CollisionShape2D8" type="CollisionShape2D" parent="Tiles/Tile 1/Top Shelf/Boxs"]
position = Vector2(231.008, 226)
shape = SubResource("RectangleShape2D_n8108")
one_way_collision = true

[node name="CollisionShape2D9" type="CollisionShape2D" parent="Tiles/Tile 1/Top Shelf/Boxs"]
position = Vector2(719, 43)
shape = SubResource("RectangleShape2D_k0l0s")
one_way_collision = true

[node name="CollisionShape2D10" type="CollisionShape2D" parent="Tiles/Tile 1/Top Shelf/Boxs"]
position = Vector2(1143, 243.062)
shape = SubResource("RectangleShape2D_nk4w7")
one_way_collision = true

[node name="CollisionShape2D11" type="CollisionShape2D" parent="Tiles/Tile 1/Top Shelf/Boxs"]
position = Vector2(1561, 299.531)
shape = SubResource("RectangleShape2D_vb606")
one_way_collision = true

[node name="CollisionShape2D12" type="CollisionShape2D" parent="Tiles/Tile 1/Top Shelf/Boxs"]
position = Vector2(1909, 128)
shape = SubResource("RectangleShape2D_6lo2o")
one_way_collision = true

[node name="CollisionShape2D14" type="CollisionShape2D" parent="Tiles/Tile 1/Top Shelf/Boxs"]
position = Vector2(2094, -32)
rotation = -0.149445
shape = SubResource("RectangleShape2D_ujtbh")
one_way_collision = true

[node name="CollisionShape2D13" type="CollisionShape2D" parent="Tiles/Tile 1/Top Shelf/Boxs"]
position = Vector2(2374, -47)
shape = SubResource("RectangleShape2D_kh5md")
one_way_collision = true

[node name="BarB" parent="." instance=ExtResource("3_spd0w")]
position = Vector2(590.001, -1626)

[node name="Icon7" type="Sprite2D" parent="BarB"]
position = Vector2(34.9994, -14.2858)
scale = Vector2(0.262277, 0.714286)
texture = ExtResource("4_02cls")

[node name="bossCam" type="Camera2D" parent="."]
position = Vector2(2989, -606)
zoom = Vector2(0.49, 0.49)

[node name="Icon" type="Sprite2D" parent="."]
position = Vector2(5131.75, -660)
scale = Vector2(8.40625, 9.30469)
texture = ExtResource("4_02cls")

[node name="Icon2" type="Sprite2D" parent="."]
position = Vector2(4797, 414)
scale = Vector2(2.99219, 9.30469)
texture = ExtResource("4_02cls")

[node name="Icon3" type="Sprite2D" parent="."]
position = Vector2(5442, 383)
scale = Vector2(2.99219, 9.30469)
texture = ExtResource("4_02cls")

[node name="Icon4" type="Sprite2D" parent="."]
position = Vector2(4294.75, -1052)
scale = Vector2(7.96484, 2.12109)
texture = ExtResource("4_02cls")

[node name="Icon5" type="Sprite2D" parent="."]
position = Vector2(5697.88, -752.375)
scale = Vector2(2.74805, 7.42773)
texture = ExtResource("4_02cls")

[node name="Icon6" type="Sprite2D" parent="."]
position = Vector2(5131.75, -1343.81)
scale = Vector2(2.74805, 2.83105)
texture = ExtResource("4_02cls")

[node name="TrainMoment" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="byeTrain" type="StaticBody2D" parent="."]
collision_mask = 4

[node name="byeTrain" type="CollisionShape2D" parent="byeTrain"]
position = Vector2(6944.19, -356)
shape = SubResource("RectangleShape2D_0k26d")

[connection signal="timeout" from="TrainMoment" to="." method="_on_train_moment_timeout"]
